feat: Add SEO meta tags to index.html and create robots.txt and sitemap.xml for improved discoverability.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,45 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Evoc Labs</title>
+    <title>EvoLabs – Building Modern Digital Products</title>
+    <meta
+      name="description"
+      content="EvoLabs builds modern websites, SaaS products, and digital solutions for startups and businesses."
+    />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://evoclabs.com/" />
+    <meta
+      property="og:title"
+      content="EvoLabs – Building Modern Digital Products"
+    />
+    <meta
+      property="og:description"
+      content="EvoLabs builds modern websites, SaaS products, and digital solutions for startups and businesses."
+    />
+    <meta
+      property="og:image"
+      content="https://i.postimg.cc/3wWLDB2q/Instagram-story-16.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://evoclabs.com/" />
+    <meta
+      property="twitter:title"
+      content="EvoLabs – Building Modern Digital Products"
+    />
+    <meta
+      property="twitter:description"
+      content="EvoLabs builds modern websites, SaaS products, and digital solutions for startups and businesses."
+    />
+    <meta
+      property="twitter:image"
+      content="https://i.postimg.cc/3wWLDB2q/Instagram-story-16.png"
+    />
+
     <link
       rel="icon"
       type="image/png"
