feat: add BookDemo form with Firebase and Meta Pixel integration, and a new Contact component.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         "script",
         "https://connect.facebook.net/en_US/fbevents.js",
       );
-      fbq("init", "693663340366678");
+      fbq("init", "693663340366678", {}, { autoConfig: false });
       fbq("track", "PageView");
     </script>
     <!-- End Meta Pixel Code -->
